--- a/src/schooltool/gradebook/browser/gradebook.css
+++ b/src/schooltool/gradebook/browser/gradebook.css
@@ -55,33 +55,66 @@ div#warning {
 }
 
 table.schooltool_gradebook {
+    border: solid 1px #808080;
     border-spacing: 0px;
     border-collapse: collapse;
 }
 
-table.schooltool_gradebook th {
-    padding: .25em;
-    border: solid 1px black;
-    background: #eeeeee;
+table.schooltool_gradebook .final_grade {
+    color: blue;
 }
 
-table.schooltool_gradebook td {
-    padding: .25em;
-    border: solid 1px black;
+.cell {
+    padding: 0em;
+    margin: 0em;
+    border-left:  thin solid gray;
+    border-right: thin solid gray;
+    color: black;
     text-align: center;
 }
 
-table.schooltool_gradebook td.empty {
-    padding: .25em;
-    border: 0px;
-    text-align: right;
+.padded {
+    padding-left: .25em;
+    padding-right: .25em;
 }
 
-table.schooltool_gradebook input[type="text"] {
-    width: 90%;
+.header {
+    background-color: #DDD;
 }
 
-table.schooltool_gradebook .final_grade {
-    color: blue;
+.title {
+    width: 90px;
+}
+
+.fd_cell {
+    background-color: #CCC;
+}
+
+.even {
+    background-color: #DDD;
+}
+
+.odd {
+    background-color: #EEE;
+}
+
+.fdbtn {
+    color: #000;
+    background-color: #999;
+    border-color: #000;
+    width: 100%;
+}
+
+input.data {
+  font-family: monospace;
+  border: 0px;
+  width: 90px;
+  background-color: transparent;
+  text-align: center;
+}
+
+input.data:focus {
+  background-color: transparent;
+  border: 0px;
 }
 
