--- a/src/schooltool/gradebook/browser/gradebook.css
+++ b/src/schooltool/gradebook/browser/gradebook.css
@@ -58,6 +58,7 @@ table.schooltool_gradebook {
     border: solid 1px #808080;
     border-spacing: 0px;
     border-collapse: collapse;
+    margin:7px 0 0;
 }
 
 table.schooltool_gradebook .final_grade {
