created column preferences view applied column hide and label preferences to gradebook scoresystem preference not yet applied tests pending

--- a/src/schooltool/gradebook/browser/gradebook.css
+++ b/src/schooltool/gradebook/browser/gradebook.css
@@ -78,6 +78,11 @@ table.schooltool_gradebook .final_grade {
     padding-right: .25em;
 }
 
+.fully_padded {
+    padding: .25em;
+    padding: .25em;
+}
+
 .header {
     background-color: #DDD;
 }
@@ -139,3 +144,6 @@ td.active_tab {
     text-align: center;
 }
 
+.bordered {
+    border: solid 1px black;
+}
