--- a/src/schooltool/gradebook/browser/gradebook.css
+++ b/src/schooltool/gradebook/browser/gradebook.css
@@ -122,7 +122,7 @@ input.data:focus {
   border: 0px;
 }
 
-.description {
+.gradebook_description {
     background-color: #CCC;
     height: 3em;
     width: 0px;
