got rid of all css classes except schooltool.gradebook for the table added activity css class for activity columns, only rule so far is 40px width got rid of fill-down row and js methods, we will do this another way

--- a/src/schooltool/gradebook/browser/resources/f_gradebook.css
+++ b/src/schooltool/gradebook/browser/resources/f_gradebook.css
@@ -6,3 +6,15 @@
     display: none;
 }
 
+.activity {
+    width: 40px;
+}
+
+.activity input {
+    width: 40px;
+}
+
+.activity span {
+    width: 40px;
+}
+
