--- a/src/schooltool/gradebook/browser/resources/f_gradebook.css
+++ b/src/schooltool/gradebook/browser/resources/f_gradebook.css
@@ -1,3 +1,9 @@
+div.schooltool_gradebook {
+    overflow: auto;
+    width: 736px;
+    margin-bottom: 20px;
+}
+
 .navigator {
     width: 140px;
 }
