added activity popup menu to gradebook activity headings, removing sort row added nexturl tp add_edit_activity view to allow return to gradebook

--- a/src/schooltool/gradebook/browser/resources/f_gradebook.css
+++ b/src/schooltool/gradebook/browser/resources/f_gradebook.css
@@ -24,3 +24,20 @@ div.schooltool_gradebook {
     width: 40px;
 }
 
+.popup_menu {
+    display: none;
+    position: absolute;
+    z-index: 10000;
+}
+
+.popup_menu li {
+    border-bottom: solid 1px #808080;
+    background-color: #EEEEEE;
+    padding: 3px 10px 3px 10px;
+    display: block;
+}
+
+.popup_menu a {
+    display: block;
+}
+
