made sure name column is at least 160px wide

--- a/src/schooltool/gradebook/browser/resources/f_gradebook.css
+++ b/src/schooltool/gradebook/browser/resources/f_gradebook.css
@@ -24,6 +24,10 @@ div.schooltool_gradebook {
     width: 40px;
 }
 
+.gradebook-name {
+    min-width: 160px;
+}
+
 .popup_menu {
     display: none;
     position: absolute;
