made sure student name link didn't wrap, making row height too big

--- a/src/schooltool/gradebook/browser/resources/f_gradebook.css
+++ b/src/schooltool/gradebook/browser/resources/f_gradebook.css
@@ -26,6 +26,9 @@ div.schooltool_gradebook {
 
 .gradebook-name {
     min-width: 160px;
+    max-width: 160px;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .popup_menu {
