--- a/src/schooltool/gradebook/browser/resources/f_gradebook.css
+++ b/src/schooltool/gradebook/browser/resources/f_gradebook.css
@@ -1,21 +1,65 @@
+.schooltool > .grid {
+    padding-top: 36px;
+}
+
+.grid > .third-nav {
+    left: 208px;
+    position: absolute;
+}
+
+.grid > .body > .widecontainer {
+    margin-top: 40px;
+    padding: 0px;
+    width: 752px;
+}
+
+.grid .grid-form {
+    margin-top: 0px;
+}
+
+.grid-form table {
+    margin-top: 0px;
+}
+
+.grid-form table tr {
+    height: 32px;
+}
+
+.grid-form table tr .gradebook-name {
+    max-width: 160px;
+    min-width: 160px;
+    overflow: hidden;
+    padding-left: 4px;
+    padding-right: 4px;
+    white-space: nowrap;
+}
+
+.grid-form table tr .gradebook-total {
+    max-width: 40px;
+    min-width: 40px;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
 div.schooltool_gradebook {
+    margin-bottom: 20px;
     overflow: auto;
     width: 752px;
-    margin-bottom: 20px;
 }
 
 div.gradebook-freezecol {
-    position: absolute;
+    background: #F7F7F7;
     overflow: hidden;
+    position: absolute;
+    top: 0px;
+    width: auto;
     z-index: 101;
 }
 
-div.gradebook-freezecol table {
-    width: auto;
-}
-
-.gradebook-row {
-    height: 30px;
+.gradebook-row td, .gradebook-header td {
+    padding: 2px auto;
+    vertical-align: middle;
+    width: 50px;
 }
 
 .navigator {
@@ -27,29 +71,7 @@ div.gradebook-freezecol table {
 }
 
 .activity {
-    width: 40px;
-}
-
-.activity input {
-    width: 40px;
-}
-
-.activity span {
-    width: 40px;
-}
-
-.gradebook-name {
-    min-width: 160px;
-    max-width: 160px;
-    white-space: nowrap;
-    overflow: hidden;
-}
-
-.gradebook-total {
-    min-width: 40px;
-    max-width: 40px;
-    white-space: nowrap;
-    overflow: hidden;
+    padding: 2px 0px;
 }
 
 .popup_menu {
@@ -67,27 +89,4 @@ div.gradebook-freezecol table {
 
 .popup_menu a {
     display: block;
-}
-
-.schooltool > .grid {
-    padding-top: 36px;
-}
-
-.grid > .third-nav {
-    position: absolute;
-    left: 208px;
-}
-
-.grid > .body > .widecontainer {
-    margin-top: 40px;
-    padding: 0px;
-    width: 752px;
-}
-
-.grid .grid-form {
-    margin-top: 0px;
-}
-
-.grid .grid-form table {
-    margin-top: 0px;
 }
