Added placeholder for empty worksheets and moved width calculation to window load event

--- a/src/schooltool/gradebook/browser/resources/f_gradebook.css
+++ b/src/schooltool/gradebook/browser/resources/f_gradebook.css
@@ -102,6 +102,10 @@
     width: 3.8em;
 }
 
+.grades .placeholder {
+    width: 100%;
+}
+
 .totals {
     overflow: hidden;
     position: absolute;
