Added even/odd row colors

--- a/src/schooltool/gradebook/browser/resources/f_gradebook.css
+++ b/src/schooltool/gradebook/browser/resources/f_gradebook.css
@@ -73,6 +73,10 @@
     height: 2.2em;
 }
 
+.gradebook-part tbody tr.odd {
+    background-color: #dfdcd9;
+}
+
 .students {
     overflow: hidden;
     position: absolute;
