--- a/src/schooltool/gradebook/browser/resources/f_gradebook.css
+++ b/src/schooltool/gradebook/browser/resources/f_gradebook.css
@@ -78,7 +78,7 @@
 }
 
 .gradebook-part thead tr {
-    height: 4em;
+    height: 1.6em;
 }
 
 .gradebook-part tbody tr {
@@ -98,19 +98,27 @@
 
 .students th, .students td {
     border-right: 1px solid #cccccc;
-    max-width: 16em;
-    min-width: 16em;
     overflow: hidden;
     padding-left: 0.4em;
     padding-right: 0.4em;
     white-space: nowrap;
 }
 
-.grades input[type="text"] {
-    border: 0px;
-    background: transparent;
-    height: 1.2em;
-    width: 4em;
+.students th {
+    max-width: 5em;
+    min-width: 5em;
+    text-align: right;
+}
+
+.students th.name {
+    max-width: 11em;
+    min-width: 11em;
+    text-align: left;
+}
+
+.students td {
+    max-width: 16em;
+    min-width: 16em;
 }
 
 .grades {
@@ -120,6 +128,13 @@
 .grades th, .grades td {
     border-left: 1px solid #cccccc;
     border-right: 1px solid #cccccc;
+}
+
+.grades input[type="text"] {
+    border: 0px;
+    background: transparent;
+    height: 1.2em;
+    width: 4em;
 }
 
 .grades input[type="text"]:focus {
@@ -145,6 +160,14 @@
     min-width: 4em;
     overflow: hidden;
     white-space: nowrap;
+}
+
+.totals th > div {
+    text-align: center;
+}
+
+th.activity-title {
+    border-bottom: 1px solid #cccccc;
 }
 
 /* Controls */
