added css class and italic style for deployed worksheet tabs

--- a/src/schooltool/gradebook/browser/resources/f_gradebook.css
+++ b/src/schooltool/gradebook/browser/resources/f_gradebook.css
@@ -33,3 +33,8 @@ table.scoresystem-scores tbody input[type="text"]:focus {
     height: 18px;
     width: 104px;
 }
+
+li.deployed a {
+    font-style: italic;
+}
+
