fixed css problem that empty_message div caused

--- a/src/schooltool/gradebook/browser/resources/f_gradebook.css
+++ b/src/schooltool/gradebook/browser/resources/f_gradebook.css
@@ -34,7 +34,7 @@ table.scoresystem-scores tbody input[type="text"]:focus {
     width: 104px;
 }
 
-.empty_message p, a {
+.empty_message {
     padding: 10px;
     font-size: 14pt;
     line-height: 20px;
