Fixed some CSS style issues

--- a/src/schooltool/gradebook/browser/resources/f_gradebook.css
+++ b/src/schooltool/gradebook/browser/resources/f_gradebook.css
@@ -14,7 +14,8 @@ table.scoresystem-scores tbody td.buttons {
     width: 104px;
 }
 
-table.scoresystem-scores tbody td.buttons input[type="submit"] {
+table.scoresystem-scores tbody td.buttons input[type="submit"],
+table.linked-column-sources tbody td.buttons input[type="submit"] {
     height: 24px;
     width: 100%;
 }
