Add styles that hide stuff from schooltool

--- a/src/schooltool/gradebook/browser/resources/f_gradebook.css
+++ b/src/schooltool/gradebook/browser/resources/f_gradebook.css
@@ -39,3 +39,10 @@ li.deployed a {
     font-style: italic;
 }
 
+.hidden-dialog {
+    display: none;
+}
+
+.activity_description {
+    display: none;
+}
